# SPEAR

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
SPIRVGen/: SPIRVAssembler.cpp  SPIRVAssembler.h  SPIRVBinaryDefines.h  SPIRVBranchOperations.h  SPIRVComplex.h  SPIRVConstant.cpp  SPIRVConstant.h  SPIRVDecoration.cpp  SPIRVDecoration.h  SPIRVExtensionAMD.h  SPIRVGen.vcxproj  SPIRVGen.vcxproj.filters  SPIRVInlineAssembler.h  SPIRVInstruction.cpp  SPIRVInstruction.h  SPIRVInterop.h  SPIRVModule.cpp  SPIRVModule.h  SPIRVOperation.cpp  SPIRVOperation.h  SPIRVOperatorImpl.h  SPIRVProgram.h  SPIRVQuaternion.h  SPIRVType.cpp  SPIRVType.h  SPIRVVariable.cpp  SPIRVVariable.h  SPIRVVariableTypeDefs.h  SPIRVVariableTypes.h  SPIRVVectorComponentAccess.h
SPIRVGenTest/: DeferredLightingExample.h  ExampleProg.h  GenerateSwizzleHeader.h  main.cpp
SPIRVShaderFactory/: CSGExampleShader.h  CSGObject.h  CameraFunctions.h  ClearColor.h  CommonBufferSourceNames.h  DefaultShaderFactory.cpp  DefaultShaderFactory.h  DefaultShaderIdentifiers.h  IShaderFactory.h  LightingFunctions.h  Mandelbrot.h  MaterialInterface.h  MathFunctions.h  MicrofacetReflection.h  PhongMaterial.h  SDFObject.h  ScreenSpaceTriangle.h  ShaderID.h  SimpleCSGRayMarching.h
